<resources>
    <string name="app_name">Pictures</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="tags">Tags</string>
    <string name="card_tags">Tags:</string>
    <string name="add">Add</string>
    <string name="url">URL</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_tag">Add Tag</string>
    <string name="added_tags">Added tags:</string>
    <string name="no_empty_input_error">Input cannot be empty</string>
    <string name="same_tag_already_added_error">Same tag already added</string>
    <string name="adding_picture_failed">Adding picture failed</string>
    <string name="tags_no_spaces_error">Tags cannot contain spaces</string>
    <string name="default_string">Default</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="similar_pictures">Similar pictures</string>
</resources>
