<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddImageActivity">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/nameLabel"/>
    <TextView
            android:text="@string/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/urlLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" android:layout_marginStart="8dp"
    />
    <TextView
            android:text="@string/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tagsLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/urlInput" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/add_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/finishButton" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:backgroundTint="@color/colorPrimary"/>
    <Button
            android:text="@string/add_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addTagButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@+id/tagsInput" app:layout_constraintBottom_toBottomOf="@+id/tagsInput"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/nameInput"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/urlInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/urlLabel" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/tagsInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tagsLabel" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/addTagButton"/>
    <TextView
            android:text="@string/added_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tagsText" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tagsInput"/>
</android.support.constraint.ConstraintLayout>