<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.PictureDetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/pictureNameText"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="36sp"
                android:fontFamily="sans-serif-black" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/picTagsText"/>
        <TextView
                android:text="@string/card_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/picTagsText"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textSize="24sp" android:fontFamily="sans-serif-light" android:textAlignment="center"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/picDateText"
                app:layout_constraintTop_toBottomOf="@+id/pictureNameText"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/picDateText"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/picTagsText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>