<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin" android:layout_marginTop="@dimen/card_margin">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/guideline"
                    app:layout_constraintGuide_percent="0.8"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/cardPictureView" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/card_image_margin"
                    android:layout_marginStart="@dimen/card_image_margin"
                    android:layout_marginEnd="@dimen/card_image_margin"
                    app:layout_constraintBottom_toTopOf="@+id/guideline" android:visibility="visible"
                    android:scaleType="centerCrop" app:srcCompat="@mipmap/ic_launcher"/>
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardNameText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/card_text_margin"
                    android:layout_marginTop="@dimen/card_text_margin" app:layout_constraintTop_toTopOf="@+id/guideline"
                    android:textStyle="bold" android:layout_marginBottom="@dimen/card_text_margin"
                    app:layout_constraintBottom_toTopOf="@+id/cardTagsText"/>
            <TextView
                    android:text="@string/card_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardTagsText" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/card_text_margin" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/card_text_margin"
                    android:layout_marginBottom="@dimen/card_text_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/card_text_margin" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/cardDateText"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    android:layout_marginTop="@dimen/card_text_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>